fix: map and todo layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   overflow-y: hidden;
   position:relative;
   cursor: pointer;
